2008-09-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* win32/itpp_acml.sln, win32/itpp_mkl.sln: Use CRLF line endings
	in MSVC++ solution files.

	* win32/itpp_acml_tests/itpp_acml_tests.sln,
	win32/itpp_acml_tests/specmat_test.vcproj,
	win32/itpp_mkl_tests/itpp_mkl_tests.sln,
	win32/itpp_mkl_tests/specmat_test.vcproj: Add MSVC++ project files
	for specmat_test.

2008-09-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/Makefile.am, tests/specmat_test.cpp,
	tests/specmat_test.ref: Add specmat_test program for testing
	special vectors and matrices.

	Initially only toeplitz() function is tested.

	* itpp/base/specmat.cpp, itpp/base/specmat.h: Fix broken
	implementation of toeplitz() function.

	The previous implementation generated incorrect matrices for two
	complex-valued input vectors. This patch fixes this problem. BTW,
	the implementation is now based on a template function, so bmat,
	smat and imat matrices can now be generated.

	Thanks to Niklas Johansson for reporting this issue. This closes
	bug report [2110119].

2008-09-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* test/vec_test.cpp, test/vec_test.ref: Revert part of SVN
	revision 1613.

	I/O stream labels for infinity and not-a-number have different
	case sensitivity in various supported GCC versions ("inf" vs.
	"Inf", "nan" vs. "NaN"). Thus we can not test for them in a vector
	initialisation from string.

2008-08-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itassert.h: Get rid of config.h dependency from
	itassert.h header file.

	* itpp/comm/galois.cpp: Fix bug in GF::set_size() method, which
	was reported by Stephan Ludwig.

	Because "alphapow" and "logalpha" are static variables, every
	instantiation of the GF class uses the very same of them. If
	different instantiations of different Galois fields access this
	(e.g. 2^8 and 2^6, while 2^6 has been created first), the latter
	might overwrite/delete the log table of the previous while calling